# ProtNES

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  compile_commands.json  cpu.rs  flake.nix
include/bus/: bus.hpp
include/cpu/: cpu.hpp
src/: main.cpp
src/bus/: bus.cpp
src/cpu/: cpu.cpp  cpu.rs
tests/cpu/: cpu_test.cpp
